--- a/docker/wwwroot/wx/survey.css
+++ b/docker/wwwroot/wx/survey.css
@@ -13,12 +13,12 @@ input{outline:none;}
  * @version v1.0.8
  */
 .wrapper{width:92%; margin:0 auto;}
-.card_wrap{width:100%; height:560px; position:relative; overflow:hidden; display:none}
-.card_cont{width:100%; height:530px; box-sizing:border-box; margin:0 auto; position:absolute;  background:url(survey_bg.png) no-repeat center top; background-size:100% auto; padding:8px 20px 18px; transition:all ease .5s; -webkit-transition:all ease .5s; -moz-transition:all ease .5s; -ms-transition:all ease .5s; transform:scale(0,0); -moz-transform:scale(0,0);-ms-transform:scale(0,0); -o-transform:scale(0,0); -webkit-transform:scale(0,0); bottom:0; display:none;}
+.card_wrap{width:100%; height:540px; position:relative; overflow:hidden; display:none}
+.card_cont{width:100%; height:500px; box-sizing:border-box; margin:0 auto; position:absolute; background:url(survey_bg.png) no-repeat center top; background-size:100% auto; padding:8px 20px 18px; transition:all ease .5s; -webkit-transition:all ease .5s; -moz-transition:all ease .5s; -ms-transition:all ease .5s; transform:scale(0,0); -moz-transform:scale(0,0);-ms-transform:scale(0,0); -o-transform:scale(0,0); -webkit-transform:scale(0,0); bottom:0; display:none;}
 .card{width:320px; height:100%; position:relative; margin:0 auto; padding:0 18px; }
-.card .card_bottom{width:100%; position:absolute; bottom:28px; left:0; box-sizing:border-box; padding:0 28px}
-.card .card_bottom a{color:#c733c5; cursor:pointer }
-.card .card_bottom span{float:right; color:#909090}.card .card_bottom span b{color:#666; font-weight:inherit}
+.card .card_bottom{width:100%;position:absolute;bottom:0px;left:0;height:26px;box-sizing:border-box;padding:0 28px}
+.card .card_bottom a{color:#c733c5;cursor:pointer;line-height:26px;}
+.card .card_bottom span{float:right;color:#909090}.card .card_bottom span b{color:#666; font-weight:inherit}
 .card .card_input {
     width: 270px;
     height: 290px;
@@ -46,7 +46,8 @@ input{outline:none;}
     font-size: 13px;
     line-height: 30px;
 }
-.card_cont.card1{ display:block;transform:scale(1,1) translate(0,0) !important ;  
+.card_cont.card1{ display:block;
+transform:scale(1,1) translate(0,0) !important ;  
 -ms-transform:scale(1,1) translate(0,0) !important ; 
 -moz-transform:scale(1,1) translate(0,0) !important ; 
 -webkit-transform:scale(1,1) translate(0,0) !important ; 
@@ -79,7 +80,6 @@ ul.select li, ul.checkbox li{min-height:36px;line-height:1.5;margin:0 0 10px 0;}
     color: #fff;
     transition: .1s;
     padding: 3px 20px;
-    margin-top: -11px;
     border-radius: 4px;
     border-color: #9C27B0;
     background-color: #8f62a7;
