--- a/docker/Views/survey/wx/survey.cshtml
+++ b/docker/Views/survey/wx/survey.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/wx/_master.cshtml";
 }
 @section head{
-    <link href="/wx/survey.css" rel="stylesheet" />
+    <link href="/wx/survey.css?v=180720" rel="stylesheet" />
 }
 @section body{
     <div class="wrapper">
