--- a/docker/Views/survey/surveys.cshtml
+++ b/docker/Views/survey/surveys.cshtml
@@ -104,7 +104,7 @@
             <el-collapse v-model="expands">
                 <el-collapse-item v-for="item in details" :title="item.title" :name="item.id">
                     <div class="options" v-for="option in item.options">
-                        <div class="progress"><div><el-progress :percentage="option.percentage" :text-inside="true" :stroke-width="15" status="success"></el-progress></div><em>{{option.count}}人</em></div>
+                        <div class="progress" v-if="item.type < 2"><div><el-progress :percentage="option.percentage" :text-inside="true" :stroke-width="15" status="success"></el-progress></div><em>{{option.count}}人</em></div>
                         <em class="em-question">{{option.flag}}</em>{{option.title}}
                     </div>
                 </el-collapse-item>
