--- a/docker/Views/charge/refundall.cshtml
+++ b/docker/Views/charge/refundall.cshtml
@@ -11,6 +11,7 @@
             <el-table-column width="150" align="center" label="校园" property="organ"></el-table-column>
             <el-table-column width="150" align="center" label="学员姓名" property="studentname"></el-table-column>
             <el-table-column width="150" align="center" label="退费项目" property="feescalename"></el-table-column>
+            <el-table-column width="100" align="center" label="退费单价" property="price"></el-table-column>
             <el-table-column width="100" align="center" label="退费数量" property="count"></el-table-column>
             <el-table-column width="120" align="center" label="退费金额" property="amount"></el-table-column>
             <el-table-column width="90" align="center" label="退费方式">
