--- a/docker/Views/charge/refund.cshtml
+++ b/docker/Views/charge/refund.cshtml
@@ -48,7 +48,7 @@
                 </template>
             </el-table-column>
         </el-table>
-        <el-pagination @@size-change="sizeChange" @@current-change="currentChange" layout="total, sizes, prev, pager, next, jumper" :current-page="index" :page-size="size" :total="total"></el-pagination>
+        <el-pagination @@size-change="sizeChange" @@current-change="currentChange" layout="total, sizes, prev, pager, next, jumper" :current-page="page" :page-size="size" :total="total"></el-pagination>
     </div>
 </template>
 <template id="app-form">
@@ -174,10 +174,10 @@ else
             refresh() {
                 var _self = this;
                 if (_self.school) {
-                    $.getJSON(location.pathname, { 'do': 'pager', page: _self.index, rows: _self.size, school: _self.school, student: _self.student, key: _self.key }, function (rlt) {
+                    $.getJSON(location.pathname, { 'do': 'pager', page: _self.page, rows: _self.size, school: _self.school, student: _self.student, key: _self.key }, function (rlt) {
                         _self.message = rlt.message;
                         _self.total = rlt.total;
-                        _self.index = rlt.index;
+                        _self.page = rlt.page;
                         _self.size = rlt.size;
                         _self.rows = rlt.rows;
                     });
@@ -204,7 +204,7 @@ else
                 this.refresh();
             },
             currentChange(val) {
-                emptyPager.index = val;
+                emptyPager.page = val;
                 this.refresh();
             },
             toAdd() {
@@ -260,7 +260,7 @@ else
                 _self.organs = rlt.data;
                 _self.school = rlt.select;
                 _self.refresh();
-            })</text>}
+            })</text>} else {<text>this.refresh()</text>}
         }
     })
     var appForm = Vue.extend({
