--- a/docker/Views/charge/retainer.cshtml
+++ b/docker/Views/charge/retainer.cshtml
@@ -37,7 +37,7 @@
             <el-table-column width="140" align="center" label="录入时间" property="create"></el-table-column>
             <el-table-column width="150" align="center" label="操作">
                 <template scope="scope">
-                    <el-button size="mini" type="warning" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1 && scope.row.payid">查看缴费单据</el-button>
+                    <el-button size="mini" type="warning" @@click="toticket(scope.row.id, scope.row.payid)" v-if="scope.row.ispay === 1 && scope.row.payid">查看缴费单据</el-button>
                     <el-button size="mini" type="success" @@click="topay(scope.row.id)" v-if="scope.row.ispay === 0 && (scope.row.type == '预缴' || scope.row.type == '定金')">缴费</el-button>
                     <el-button size="mini" type="primary" @@click="handleVerify(scope.row)" v-if="scope.row.ispay === 0 && scope.row.type != '预缴' && scope.row.type != '定金'">审核</el-button>
                     <el-button size="mini" type="warning" @@click="handleDelete(scope.row)" v-if="scope.row.ispay === 0">删除</el-button>
@@ -204,7 +204,7 @@
                         emptyPager.Loaded = false;
                         if (rlt.success) {
                             if (rlt.ispay) {
-                                location.href = '/ticket?id=' + rlt.payid;
+                                location.href = '/ticket?id=' + rlt.payid + '&retainer=' + rlt.id;
                             } else {
                                 location.href = '/pay?id=' + rlt.payid;
                             }
@@ -239,8 +239,8 @@
             refund() {
                 router.push('/retainer/refund?organ=' + emptyPager.school + '&student=@ViewBag.Student');
             },
-            toticket(payid) {
-                location.href = '/ticket?id=' + payid;
+            toticket(id, payid) {
+                location.href = '/ticket?id=' + payid + '&retainer=' + id;
             },
             handleVerify(row) {
                 this.$confirm('记录审核后将不可修改及删除，确定吗?', '提示', {
